--- a/web/index.html
+++ b/web/index.html
@@ -401,8 +401,8 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js" crossorigin="anonymous"></script>
+  <script src="vendor/jspdf.umd.min.js"></script>
+  <script src="vendor/jspdf.plugin.autotable.min.js"></script>
   <script src="https://unpkg.com/xlsx-js-style@1.2.0/dist/xlsx.min.js" crossorigin="anonymous"></script>
   <script>
     const HOLIDAYS_2026 = [
