--- a/web/index.html
+++ b/web/index.html
@@ -344,7 +344,7 @@
       <a href="https://www.gov.cn/zhengce/zhengceku/202511/content_7047091.htm" target="_blank" rel="noopener noreferrer">
         2026 年部分节假日安排
       </a>，快速生成覆盖假期及前后延伸日期的值班表。
-      点击单元格可在“休”“班”“值”“空”之间循环。
+      点击单元格可在“休”“班”“值”“空”之间循环。本项目为纯前端项目，不会在服务器端留存任何数据，请放心使用。
     </p>
 
     <form id="control-form">
